[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Baskic8-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Code/Battle/GUI.gd" type="Script" id=2]
[ext_resource path="res://2D/Items/revolver.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 in_color:hint_color;
uniform vec4 out_color:hint_color;

uniform float in_out:hint_range(0.,1.)=0.;

uniform float position:hint_range(-1.5,1.) = 0.856;
uniform vec2 size = vec2(16., 16.);

void fragment(){
    vec2 a = (1./SCREEN_PIXEL_SIZE) / size;
    
    vec2 uv=UV;
    uv *= a;
    
    vec2 i_uv = floor(uv);
    vec2 f_uv = fract(uv);
    
    float wave = max(0.,i_uv.x/(a.x) - position);
    
    vec2 center = f_uv*2.-1.;
    float circle = length(center);
    circle = 1. - step(wave,circle);
    
    vec4 color = mix(in_color, out_color, step(0.5, in_out));
    
    COLOR=vec4(circle) * color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/in_color = Color( 0, 0, 0, 1 )
shader_param/out_color = Color( 0.0156863, 0.00784314, 0.196078, 1 )
shader_param/in_out = 1.0
shader_param/position = 1.0
shader_param/size = Vector2( 50, 50 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 189.0
margin_top = 212.0
margin_right = 249.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="Label" parent="VBoxContainer"]
margin_right = 60.0
margin_bottom = 11.0
custom_colors/font_color = Color( 1, 0.882353, 0.388235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "LEFT: 00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEVEL" type="Label" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 60.0
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 0.882353, 0.388235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 01"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WAVE" type="Label" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 60.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 0.882353, 0.388235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "WAVE 01"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revolver" type="Sprite" parent="."]
position = Vector2( 20, 241 )
texture = ExtResource( 3 )

[node name="AmmoBasic" type="Label" parent="."]
margin_left = 34.0
margin_top = 237.0
margin_right = 74.0
margin_bottom = 253.0
custom_colors/font_color = Color( 0.211765, 0.231373, 0.407843, 1 )
custom_colors/font_outline_modulate = Color( 0.403922, 0.615686, 0.764706, 1 )
custom_fonts/font = SubResource( 4 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="GameEnd" type="Timer" parent="."]
one_shot = true

[node name="Screentone" type="ColorRect" parent="."]
pause_mode = 2
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="GameEnd" to="." method="_on_GameEnd_timeout"]
